--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ arrow==1.2.3
 asttokens==2.2.1
 attrs==22.2.0
 backcall==0.2.0
+bcrypt==4.0.1
 beautifulsoup4==4.11.2
 bleach==6.0.0
 blinker==1.5
@@ -24,15 +25,19 @@ cryptography==39.0.1
 debugpy==1.6.6
 decorator==5.1.1
 defusedxml==0.7.1
+dnspython==2.3.0
+email-validator==1.3.1
 entrypoints==0.4
 et-xmlfile==1.1.0
 executing==1.2.0
+fastapi==0.92.0
 fastjsonschema==2.16.2
 folium==0.14.0
 fqdn==1.5.1
 gitdb==4.0.10
 GitPython==3.1.30
 great-expectations==0.15.46
+h11==0.14.0
 idna==3.4
 importlib-metadata==6.0.0
 ipykernel==6.21.1
@@ -73,6 +78,7 @@ packaging==23.0
 pandas==1.5.3
 pandocfilters==1.5.0
 parso==0.8.3
+passlib==1.7.4
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.4.0
@@ -88,6 +94,7 @@ pycparser==2.21
 pydantic==1.10.4
 pydeck==0.8.0
 Pygments==2.14.0
+PyJWT==2.6.0
 Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
@@ -113,6 +120,7 @@ smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.6.2
+starlette==0.25.0
 streamlit==1.17.0
 streamlit-folium==0.11.0
 terminado==0.17.1
@@ -127,6 +135,7 @@ tzdata==2022.7
 tzlocal==4.2
 uri-template==1.2.0
 urllib3==1.26.14
+uvicorn==0.20.0
 validators==0.20.0
 wcwidth==0.2.6
 webcolors==1.12
