--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ arrow==1.2.3
 asttokens==2.2.1
 attrs==22.2.0
 backcall==0.2.0
+bcrypt==4.0.1
 beautifulsoup4==4.11.2
 bleach==6.0.0
 blinker==1.5
-boto3==1.26.66
-botocore==1.29.66
+boto3~=1.26.62
+botocore~=1.29.62
 branca==0.6.0
 cachetools==5.3.0
 certifi==2022.12.7
@@ -24,15 +25,19 @@ cryptography==39.0.1
 debugpy==1.6.6
 decorator==5.1.1
 defusedxml==0.7.1
+dnspython==2.3.0
+email-validator==1.3.1
 entrypoints==0.4
 et-xmlfile==1.1.0
 executing==1.2.0
+fastapi==0.92.0
 fastjsonschema==2.16.2
 folium==0.14.0
 fqdn==1.5.1
 gitdb==4.0.10
 GitPython==3.1.30
 great-expectations==0.15.46
+h11==0.14.0
 idna==3.4
 importlib-metadata==6.0.0
 ipykernel==6.21.1
@@ -67,12 +72,13 @@ nbformat==5.7.3
 nest-asyncio==1.5.6
 notebook==6.5.2
 notebook_shim==0.2.2
-numpy==1.24.2
+numpy~=1.24.1
 openpyxl==3.1.0
 packaging==23.0
 pandas==1.5.3
 pandocfilters==1.5.0
 parso==0.8.3
+passlib==1.7.4
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.4.0
@@ -88,6 +94,7 @@ pycparser==2.21
 pydantic==1.10.4
 pydeck==0.8.0
 Pygments==2.14.0
+PyJWT==2.6.0
 Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
@@ -108,11 +115,12 @@ s3transfer==0.6.0
 scipy==1.10.0
 semver==2.13.0
 Send2Trash==1.8.0
-six==1.16.0
+six~=1.15.0
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.6.2
+starlette==0.25.0
 streamlit==1.17.0
 streamlit-folium==0.11.0
 terminado==0.17.1
@@ -127,10 +135,20 @@ tzdata==2022.7
 tzlocal==4.2
 uri-template==1.2.0
 urllib3==1.26.14
+uvicorn==0.20.0
 validators==0.20.0
 wcwidth==0.2.6
 webcolors==1.12
 webencodings==0.5.1
 websocket-client==1.5.1
 widgetsnbextension==4.0.5
-zipp==3.12.1
+zipp~=3.12.0
+
+jwt~=1.3.1
+decouple~=0.0.7
+future~=0.18.2
+pip~=21.2.4
+wheel~=0.37.0
+setuptools~=58.0.4
+config~=0.5.1
+pyspark~=3.3.1
