--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ fqdn==1.5.1
 gitdb==4.0.10
 GitPython==3.1.30
 great-expectations==0.15.46
+gunicorn==20.1.0
 h11==0.14.0
 htbuilder==0.6.1
 idna==3.4
