--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ dnspython==2.3.0
 email-validator==1.3.1
 entrypoints==0.4
 et-xmlfile==1.1.0
+exceptiongroup==1.1.0
 executing==1.2.0
 Faker==17.0.0
 fastapi==0.92.0
@@ -45,9 +46,12 @@ great-expectations==0.15.46
 gunicorn==20.1.0
 h11==0.14.0
 htbuilder==0.6.1
+httpcore==0.16.3
+httpx==0.23.3
 idna==3.4
 importlib-metadata==6.0.0
 importlib-resources==5.12.0
+iniconfig==2.0.0
 ipykernel==6.21.1
 ipython==8.9.0
 ipython-genutils==0.2.0
@@ -97,12 +101,14 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.4.0
 platformdirs==3.0.0
+pluggy==1.0.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.36
 protobuf==3.20.3
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
 pyarrow==11.0.0
 pycparser==2.21
 pydantic==1.10.4
@@ -113,6 +119,9 @@ pymdown-extensions==9.9.2
 Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
+pytest==7.2.1
+pytest-html==3.2.0
+pytest-metadata==2.0.4
 python-dateutil==2.8.2
 python-decouple==3.7
 python-json-logger==2.0.4
@@ -122,6 +131,7 @@ PyYAML==6.0
 pyzmq==25.0.0
 requests==2.28.2
 rfc3339-validator==0.1.4
+rfc3986==1.5.0
 rfc3986-validator==0.1.1
 rich==13.3.1
 ruamel.yaml==0.17.17
@@ -152,6 +162,7 @@ streamlit-vertical-slider==1.0.2
 terminado==0.17.1
 tinycss2==1.2.1
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
 tornado==6.2
 tqdm==4.64.1
