--- a/requirements.txt
+++ b/requirements.txt
@@ -88,8 +88,8 @@ idna==3.4
 importlib-metadata==6.0.0
 importlib-resources==5.12.0
 iniconfig==2.0.0
-ipykernel==6.21.1
-ipython==8.9.0
+ipykernel==6.16.2
+ipython==7.34.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.4
 isoduration==20.11.0
@@ -102,8 +102,8 @@ jsonpath-ng==1.5.3
 jsonpointer==2.3
 jsonschema==4.16.0
 jupyter-events==0.6.3
-jupyter_client==8.0.2
-jupyter_core==5.2.0
+jupyter_client==8.0.0a1
+jupyter_core==
 jupyter_server==2.1.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
